--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <link rel="stylesheet" href="2D.css" />
   </head>
   <body>
     <!-- Attachment point for your app -->
