--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
+      charset="utf-8"
     />
-    <link rel="stylesheet" href="2D.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Attachment point for your app -->
     <div id="container"></div>
     <div id="overlay"></div>
     <script src="./client.bundle?platform=vr"></script>
+
     <script>
       // Initialize the React 360 application
       React360.init(
