--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- <button onClick="window.postMessage({ type: 'MOUSE_LOCK_CAMERA_CONTROLLER_MESSAGE', lock: true})">M</button> -->
       </div>
-      <!-- <div id="stalker"></div> -->
+      <div id="stalker"></div>
       <!-- <svg id="stalker" width="1000" height="1000">
         <polygon points="100,10 40,198 190,78 10,78 160,198" fill="lime" stroke="purple" stroke-width="3" fill-rule="nonzero" style="transform: scale(.5);" />
       </svg> -->
