--- a/index.html
+++ b/index.html
@@ -24,17 +24,14 @@
         <button onClick="window.postMessage({ type: 'KEYBOARD_CAMERA_CONTROLLER_MESSAGE', direction: 'DOWN'})">▼</button>
         <button onClick="window.postMessage({ type: 'KEYBOARD_CAMERA_CONTROLLER_MESSAGE', direction: 'RIGHT'})">►</button>
         <button onClick="window.postMessage({ type: 'KEYBOARD_CAMERA_CONTROLLER_MESSAGE', direction: 'ENTER'})">E</button>
-
         <!-- <button onClick="window.postMessage({ type: 'MOUSE_LOCK_CAMERA_CONTROLLER_MESSAGE', lock: true})">M</button> -->
       </div>
       <!-- <div id="stalker"></div> -->
       <!-- <svg id="stalker" width="1000" height="1000">
         <polygon points="100,10 40,198 190,78 10,78 160,198" fill="lime" stroke="purple" stroke-width="3" fill-rule="nonzero" style="transform: scale(.5);" />
       </svg> -->
-      <script type="text/javascript" src="./stalker.js"></script>
-
+    <script src="./node_modules/three/build/three.js"></script>
     <script src="./client.bundle?platform=vr"></script>
-
     <script>
       // Initialize the React 360 application
       React360.init(
@@ -44,6 +41,8 @@
           assetRoot: "static_assets/"
         }
       );
-    </script>
+    </script>      
+    <script type="text/javascript" src="./stalker.js"></script>
+    <!-- <canvas id="myCanvas"></canvas> -->
   </body>
 </html>
