--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
       charset="utf-8"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Attachment point for your app -->
+    <div class="logo-container">
+        <span class="logo logo-1"></span>
+    </div>
     <div id="container"></div>
     <div id="overlay"></div>
     <div id="commentary"></div>
@@ -32,6 +36,7 @@
         <polygon points="100,10 40,198 190,78 10,78 160,198" fill="lime" stroke="purple" stroke-width="3" fill-rule="nonzero" style="transform: scale(.5);" />
       </svg> -->
       <script type="text/javascript" src="./stalker.js"></script>
+      <script src="./main.js"></script>
 
     <script src="./client.bundle?platform=vr"></script>
     <script>
