--- a/index.html
+++ b/index.html
@@ -24,10 +24,54 @@
     <div class="logo-container"><!-- あまじょうロゴを降らせるdiv -->
         <span class="logo logo-1"></span>
     </div>
-    <div id="logoButton">ロゴを降らせる</div>
+    <ul id="nav">
+      <span></span>
+      <li><div id="logoButton">ロゴを降らせる</div></li>
+      <li>
+        <h2>現在の進捗状況</h2>
+        <table>
+          <tr>
+            <th>あまじょう看板前</th>
+            <td id="signboardVal">0 / 3</td>
+          </tr>
+          <tr>
+            <th>駐車場</th>
+            <td id="parkingVal">0 / 3</td>
+          </tr>
+          <tr>
+            <th>玄関</th>
+            <td id="entranceVal">0 / 3</td>
+          </tr>
+          <tr>
+            <th>２階</th>
+            <td id="secondFloorVal">0 / 3</td>
+          </tr>
+          <tr>
+            <th>１年教室</th>
+            <td id="firstGradeVal">0 / 3</td>
+          </tr>
+          <tr>
+            <th>２年教室</th>
+            <td id="secondGradeVal">0 / 3</td>
+          </tr>
+          <tr>
+            <th>多目的室</th>
+            <td id="multipurposeVal">0 / 3</td>
+          </tr>
+
+      
+        </table>
+      </li>
+      <li>これはダミーテキストです。</li>
+      <li>これはダミーテキストです。</li>
+      <li>これはダミーテキストです。</li>
+      <li>これはダミーテキストです。</li>
+      <canvas class="background"></canvas>
+    </ul>
     <div id="container"></div><!-- 360の本体を反映しているdiv -->
     <div id="overlay"></div><!-- 2Dのインターフェースを描写しているdiv -->
     <div id="commentary"></div><!-- ホバー時の詳細解説を描写するdiv -->
+    <div id="answer"></div>
 
       <div id="controller" style="z-index: 999;position: absolute;bottom: 0px;right:0px;">
         <button onClick="window.postMessage({ type: 'KEYBOARD_CAMERA_CONTROLLER_MESSAGE', direction: 'LEFT'})">◄</button>
@@ -44,7 +88,7 @@
       </svg> -->
 
       <script type="text/javascript" src="./stalker.js"></script><!-- マウスストーカ―のjs -->
-      <script src="./main.js"></script><!-- ロゴを降らせるjs -->
+      <script src="./logo.js"></script><!--ロゴを降らせるjs-->
 
     <script src="./client.bundle?platform=vr"></script>
     <script>
@@ -57,7 +101,11 @@
         }
       );
     </script>      
+    <script type="text/javascript" src="node_modules\particlesjs\src\particles.js"></script><!-- 粒子アニメーション(ハンバーガーメニューに使っている)-->
     <script type="text/javascript" src="./loading.js"></script><!-- ロード時のjs -->
     <script type="text/javascript" src="./stalker.js"></script><!-- マウスストーカ―のjs -->
+    <script type="text/javascript" src="./Nav.js"></script><!-- ハンバーガーメニューのjs -->
+
+
   </body>
 </html>
