--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <ul id="l-nav">
       <span></span>
       <li><div id="logoButton">ロゴを降らせる</div></li>
+      <li class="answer" id="commentaryGame">解説探しを始める！</li>
+      <li class="answer" >解説の答えを見る</li>
       <li>
         <h2>現在の進捗状況</h2>
         <table>
@@ -62,7 +64,6 @@
       </li>
       <li>これはダミーテキストです。
       </li>
-      <li>これはダミーテキストです。</li>
       <li>これはダミーテキストです。</li>
       <li>これはダミーテキストです。</li>
       <canvas class="background"></canvas>
