--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <span></span>
       <li><div id="logoButton">ロゴを降らせる</div></li>
       <li class="answer" id="commentaryGame">解説探しを始める！</li>
-      <li class="answer" >解説の答えを見る</li>
+      <li class="answer" id="solution">解説の答えを見る</li>
       <li>
         <h2>現在の進捗状況</h2>
         <table>
