--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
           </tr>      
         </table>
       </li>
-      <li>これはダミーテキストです。
-      </li>
       <li>これはダミーテキストです。</li>
       <li>これはダミーテキストです。</li>
       <li>これはダミーテキストです。</li>
@@ -133,7 +131,7 @@
         }
       );
     </script>      
-    <script type="text/javascript" src="node_modules\particlesjs\src\particles.js"></script><!-- 粒子アニメーション(ハンバーガーメニューに使っている)-->
+    <script type="text/javascript" src="node_modules\particlesjs\src\particles.js"></script>
     <script type="text/javascript" src="./loading.js"></script><!-- ロード時のjs -->
     <script type="text/javascript" src="./stalker.js"></script><!-- マウスストーカ―のjs -->
     <script type="text/javascript" src="./Nav.js"></script><!-- ハンバーガーメニューのjs -->
