--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="logo-container"><!-- あまじょうロゴを降らせるdiv -->
         <span class="logo logo-1"></span>
     </div>
+    <!-- 左のハンバーガーメニュー -->
     <ul id="l-nav">
       <span></span>
       <li><div id="logoButton">ロゴを降らせる</div></li>
@@ -62,6 +63,8 @@
           </tr>      
         </table>
       </li>
+      <li>これはダミーテキストです。
+      </li>
       <li>これはダミーテキストです。</li>
       <li>これはダミーテキストです。</li>
       <canvas class="background"></canvas>
@@ -69,6 +72,7 @@
     <div id="kakko-l"></div>
     <div id="kakko-Instructions"></div>
 
+    <!-- 右のハンバーガーメニュー -->
     <ul id="r-nav">
       <li><h2>行先を選べます。</h2></li>
       <li>
@@ -96,7 +100,6 @@
           </tr>
         </table>
       </li>
-      <canvas class="r-background"></canvas>
     </ul>
         <div id="kakko-r"></div>
 
@@ -137,7 +140,7 @@
         }
       );
     </script>      
-    <script type="text/javascript" src="node_modules\particlesjs\src\particles.js"></script>
+    <script type="text/javascript" src="node_modules\particlesjs\src\particles.js"></script><!-- 粒子アニメーション(ハンバーガーメニューに使っている)-->
     <script type="text/javascript" src="./loading.js"></script><!-- ロード時のjs -->
     <script type="text/javascript" src="./stalker.js"></script><!-- マウスストーカ―のjs -->
     <script type="text/javascript" src="./Nav.js"></script><!-- ハンバーガーメニューのjs -->
