--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
           </tr>      
         </table>
       </li>
-      <li>これはダミーテキストです。
-      </li>
-      <li>これはダミーテキストです。</li>
-      <li>これはダミーテキストです。</li>
+      <li><a class="twitter-timeline" href="https://twitter.com/j_amami?ref_src=twsrc%5Etfw">Tweets by j_amami</a>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
       <canvas class="background"></canvas>
     </ul>      
     <div id="kakko-l"></div>
